Fix barometer colors and connect it to IPv4 visibility

--- a/src/components/Features/Visibility.css
+++ b/src/components/Features/Visibility.css
@@ -1,10 +1,11 @@
 .visibility-container {
-    height: 700px;
+    height: 650px;
     width: 200vh;
     padding: 20px 0 10px;
     display: flex;
     flex-direction: column;
     justify-content: center;
+    
 }
 
 .visibility-container > video {
@@ -26,3 +27,37 @@
     padding-top: 0%;
     padding-left: 10%;
 }
+
+.button-container {
+    height: 100px;
+    width: 20vh;
+    margin-left: 150px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+}
+
+.Bbuttonvis{
+    border-radius: 4px;
+    background: #07080a;
+    padding: 10px;
+    padding-left: 10%;
+    width: 100px;
+    height: 100px;
+    color: #fff;
+    font-size: 20px;
+    outline: none;
+    border: none;
+    cursor: pointer;
+    transition: all 0.3s ease-out;
+  }
+  
+  .settingsSubmitButton:hover {
+    background-color: rgb(124, 33, 33);
+}
+
+@media screen and (max-width: 800px) {
+    .left, .main, .right {
+      width: 100%; /* The width is 100%, when the viewport is 800px or smaller */
+    }
+  }
